fix: fixed spacing issues in introduction & about section

--- a/src/index.css
+++ b/src/index.css
@@ -27,10 +27,6 @@ h2:after {
   @apply uppercase font-secondary text-blue-600 text-3xl;
 }
 
-.section-spacing {
-  @apply grid gap-y-4 mt-6 md:mt-10 ml-0 md:ml-28 mr-0 md:mr-40;
-}
-
 .text-primary {
   @apply font-primary text-gray-600 text-base md:text-lg leading-normal;
 }
